build: Improve R8 rules and enable aggressive optimization modes
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,17 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# R8 Full mode
+android.enableR8.fullMode=true
+
+# https://jakewharton.com/increased-accuracy-of-aapt2-keep-rules/
+android.useMinimalKeepRules=true
+
+# Enable rudimentary R class namespacing where each library only contains
+# references to the resources it declares instead of declarations plus all
+# transitive dependency references.
+android.namespacedRClass=true
+
+# Suppress warnings for some features that aren't yet stabilized
+android.suppressUnsupportedOptionWarnings=android.enableR8.fullMode,android.useMinimalKeepRules,android.namespacedRClass,android.suppressUnsupportedOptionWarnings
