--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -57,7 +57,7 @@ android {
                 }
             }
             minifyEnabled true
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
+            proguardFiles "proguard-android-optimize.txt", "proguard-rules.pro"
         }
         debug {
             applicationIdSuffix ".debug"
