tunnel: libwg-go: stick go tarball in gradle cache
This way we don't have to build over and over.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -30,14 +30,14 @@ android {
         release {
             externalNativeBuild {
                 cmake {
-                    arguments "-DANDROID_PACKAGE_NAME=${groupName}"
+                    arguments "-DANDROID_PACKAGE_NAME=${groupName}", "-DGRADLE_USER_HOME=${project.gradle.gradleUserHomeDir}"
                 }
             }
         }
         debug {
             externalNativeBuild {
                 cmake {
-                    arguments "-DANDROID_PACKAGE_NAME=${groupName}.debug"
+                    arguments "-DANDROID_PACKAGE_NAME=${groupName}.debug", "-DGRADLE_USER_HOME=${project.gradle.gradleUserHomeDir}"
                 }
             }
         }
