--- a/tunnel/tools/CMakeLists.txt
+++ b/tunnel/tools/CMakeLists.txt
@@ -24,6 +24,7 @@ add_custom_target(libwg-go.so WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib
     ANDROID_LLVM_TRIPLE=${ANDROID_LLVM_TRIPLE}
     ANDROID_SYSROOT=${ANDROID_SYSROOT}
     ANDROID_PACKAGE_NAME=${ANDROID_PACKAGE_NAME}
+    GRADLE_USER_HOME=${GRADLE_USER_HOME}
     CFLAGS=${CMAKE_C_FLAGS}\ -Wno-unused-command-line-argument
     LDFLAGS=${CMAKE_SHARED_LINKER_FLAGS}\ -fuse-ld=gold
     DESTDIR=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
