--- a/build.gradle
+++ b/build.gradle
@@ -7,27 +7,28 @@ allprojects {
 
 buildscript {
     ext {
+        agpVersion = '3.6.1'
         annotationsVersion = '1.1.0'
         appcompatVersion = '1.1.0'
+        bintrayPluginVersion = '1.8.4'
+        biometricVersion = '1.0.1'
         cardviewVersion = '1.0.0'
         collectionVersion = '1.1.0'
-        coreKtxVersion = '1.2.0'
-        coroutinesVersion = '1.3.5'
         constraintLayoutVersion = '1.1.3'
         coordinatorLayoutVersion = '1.1.0'
-        agpVersion = '3.6.1'
+        coreKtxVersion = '1.2.0'
+        coroutinesVersion = '1.3.5'
+        eddsaVersion = '0.3.0'
         fragmentVersion = '1.2.3'
-        materialComponentsVersion = '1.1.0'
         jsr305Version = '3.0.2'
+        junitVersion = '4.13'
         kotlinVersion = '1.3.71'
+        materialComponentsVersion = '1.1.0'
+        mavenPluginVersion = '2.1'
         preferenceVersion = '1.1.0'
         streamsupportVersion = '1.7.2'
         threetenabpVersion = '1.2.3'
         zxingEmbeddedVersion = '3.6.0'
-        eddsaVersion = '0.3.0'
-        bintrayPluginVersion = '1.8.4'
-        mavenPluginVersion = '2.1'
-        junitVersion = '4.13'
 
         groupName = 'com.wireguard.android'
     }
