ui: disable LongLogTag lint
We know what we're doing

Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -59,6 +59,9 @@ android {
             versionNameSuffix "-debug"
         }
     }
+    lintOptions {
+        disable('LongLogTag')
+    }
 }
 
 dependencies {
