--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
         jsr305Version = '3.0.2'
         junitVersion = '4.13'
         kotlinVersion = '1.3.71'
-        materialComponentsVersion = '1.1.0'
+        materialComponentsVersion = '1.2.0-alpha05'
         mavenPluginVersion = '2.1'
         preferenceVersion = '1.1.0'
         streamsupportVersion = '1.7.2'
