tunnel: disable BuildConfig generation
We don't (and shouldn't) use BuildConfig values, but the class was
polluting our public API regardless which is undesirable.

Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -21,6 +21,9 @@ android {
             path 'tools/CMakeLists.txt'
         }
     }
+    libraryVariants.all {
+        it.generateBuildConfigProvider.configure { enabled = false }
+    }
     testOptions.unitTests.all {
         testLogging {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
