--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,12 @@
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
-}
-
 buildscript {
     ext {
         agpVersion = '4.0.1'
         annotationsVersion = '1.1.0'
         appcompatVersion = '1.2.0'
-        bintrayPluginVersion = '1.8.4'
-        biometricVersion = '1.0.1'
+        bintrayPluginVersion = '1.8.5'
+        biometricVersion = '1.1.0-alpha02'
         collectionVersion = '1.1.0'
-        constraintLayoutVersion = '2.0.0'
+        constraintLayoutVersion = '2.0.1'
         coordinatorLayoutVersion = '1.1.0'
         coreKtxVersion = '1.3.1'
         coroutinesVersion = '1.3.9'
@@ -22,7 +14,7 @@ buildscript {
         fragmentVersion = '1.2.5'
         jsr305Version = '3.0.2'
         junitVersion = '4.13'
-        kotlinVersion = '1.4.0'
+        kotlinVersion = '1.4.10'
         materialComponentsVersion = '1.3.0-alpha02'
         mavenPluginVersion = '2.1'
         preferenceVersion = '1.1.1'
@@ -38,6 +30,13 @@ buildscript {
         classpath "com.github.dcendents:android-maven-gradle-plugin:$mavenPluginVersion"
         classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintrayPluginVersion"
     }
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
+allprojects {
     repositories {
         google()
         jcenter()
