gradle: desugar retrofuture and remove old deps
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,8 @@ buildscript {
         materialComponentsVersion = '1.3.0-alpha02'
         mavenPluginVersion = '2.1'
         preferenceVersion = '1.1.1'
-        streamsupportVersion = '1.7.2'
-        threetenabpVersion = '1.2.4'
         zxingEmbeddedVersion = '3.6.0'
+        desugarVersion = '1.0.10'
 
         groupName = 'com.wireguard.android'
     }
