--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         jsr305Version = '3.0.2'
         junitVersion = '4.13'
         kotlinVersion = '1.4.10'
-        materialComponentsVersion = '1.3.0-alpha02'
+        materialComponentsVersion = '22973ff10305397bfc72fed41684175fee8aeefb'
         mavenPluginVersion = '2.1'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '3.6.0'
@@ -39,6 +39,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
