--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,17 @@ buildscript {
         coordinatorLayoutVersion = '1.1.0'
         coreKtxVersion = '1.3.1'
         coroutinesVersion = '1.3.9'
+        desugarVersion = '1.0.10'
         eddsaVersion = '0.3.0'
         fragmentVersion = '1.2.5'
         jsr305Version = '3.0.2'
         junitVersion = '4.13'
         kotlinVersion = '1.4.10'
+        lifecycleRuntimeKtxVersion = '2.3.0-alpha07'
         materialComponentsVersion = '22973ff10305397bfc72fed41684175fee8aeefb'
         mavenPluginVersion = '2.1'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '3.6.0'
-        desugarVersion = '1.0.10'
 
         groupName = 'com.wireguard.android'
     }
