--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext {
+        activityVersion = '1.2.0-alpha08'
         agpVersion = '4.0.1'
         annotationsVersion = '1.1.0'
         appcompatVersion = '1.2.0'
@@ -11,7 +12,7 @@ buildscript {
         coreKtxVersion = '1.3.1'
         coroutinesVersion = '1.3.9'
         desugarVersion = '1.0.10'
-        fragmentVersion = '1.2.5'
+        fragmentVersion = '1.3.0-alpha08'
         jsr305Version = '3.0.2'
         junitVersion = '4.13'
         kotlinVersion = '1.4.10'
