--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -57,6 +57,7 @@ android {
 
 dependencies {
     implementation project(":tunnel")
+    implementation "androidx.activity:activity-ktx:$activityVersion"
     implementation "androidx.annotation:annotation:$annotationsVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
