--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         coordinatorLayoutVersion = '1.1.0'
         coreKtxVersion = '1.3.1'
         coroutinesVersion = '1.3.9'
+        datastoreVersion = '1.0.0-alpha01'
         desugarVersion = '1.0.10'
         fragmentVersion = '1.3.0-alpha07'
         jsr305Version = '3.0.2'
