--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        activityVersion = '1.2.0-alpha07'
+        activityVersion = '1.2.0-beta01'
         agpVersion = '4.0.1'
         annotationsVersion = '1.1.0'
         appcompatVersion = '1.2.0'
@@ -13,7 +13,7 @@ buildscript {
         coroutinesVersion = '1.3.9'
         datastoreVersion = '1.0.0-alpha01'
         desugarVersion = '1.0.10'
-        fragmentVersion = '1.3.0-alpha07'
+        fragmentVersion = '1.3.0-beta01'
         jsr305Version = '3.0.2'
         junitVersion = '4.13'
         kotlinVersion = '1.4.10'
