--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
         junitVersion = '4.13'
         kotlinVersion = '1.4.10'
         lifecycleRuntimeKtxVersion = '2.3.0-alpha07'
-        materialComponentsVersion = '22973ff10305397bfc72fed41684175fee8aeefb'
+        materialComponentsVersion = '1.3.0-alpha03'
         mavenPluginVersion = '2.1'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '3.6.0'
@@ -41,7 +41,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
     }
 }
 
