Add pre/post up/down support for rooted GoBackend
When using the GoBackend on a rooted device allow for pre/post up/down
actions to be executed when the tunnel state changes. On non-rooted
devices the scripts are not executed but will still be parsed from the
configuration file. %i syntax is not supported. If any script fails to
execute the remaining scripts in that step are skipped

Signed-off-by: Adam Irr <adam.irr@outlook.com>

--- a/tunnel/src/test/resources/working.conf
+++ b/tunnel/src/test/resources/working.conf
@@ -2,6 +2,12 @@
 Address = 192.0.2.2/32,2001:db8:ffff:ffff:ffff:ffff:ffff:ffff/128
 DNS = 192.0.2.0
 PrivateKey = TFlmmEUC7V7VtiDYLKsbP5rySTKLIZq1yn8lMqK83wo=
+PreUp = echo "pre up 1"
+PreUp = echo "pre up 2"
+PostUp = echo "post up 1"
+PreDown = echo "pre down 1"
+PostDown = echo "post down 1"
+
 [Peer]
 AllowedIPs = 0.0.0.0/0, ::0/0
 Endpoint = 192.0.2.1:51820
