--- a/build.gradle
+++ b/build.gradle
@@ -6,17 +6,17 @@ buildscript {
         appcompatVersion = '1.2.0'
         biometricVersion = '1.1.0-beta01'
         collectionVersion = '1.1.0'
-        constraintLayoutVersion = '2.0.2'
+        constraintLayoutVersion = '2.0.4'
         coordinatorLayoutVersion = '1.1.0'
         coreKtxVersion = '1.3.1'
-        coroutinesVersion = '1.3.9'
-        datastoreVersion = '1.0.0-alpha01'
+        coroutinesVersion = '1.4.1'
+        datastoreVersion = '1.0.0-alpha02'
         desugarVersion = '1.0.10'
         fragmentVersion = '1.3.0-beta01'
         jsr305Version = '3.0.2'
-        junitVersion = '4.13'
+        junitVersion = '4.13.1'
         kotlinVersion = '1.4.10'
-        lifecycleRuntimeKtxVersion = '2.3.0-alpha07'
+        lifecycleRuntimeKtxVersion = '2.3.0-beta01'
         materialComponentsVersion = '1.3.0-alpha03'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '3.6.0'
