build: upgrade to MDC 1.3.0-beta01
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         junitVersion = '4.13.1'
         kotlinVersion = '1.4.21'
         lifecycleRuntimeKtxVersion = '2.3.0-beta01'
-        materialComponentsVersion = '1.3.0-alpha04'
+        materialComponentsVersion = '1.3.0-beta01'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '3.6.0'
 
