--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        activityVersion = '1.2.0-beta02'
+        activityVersion = '1.2.0-rc01'
         agpVersion = '4.1.1'
         annotationsVersion = '1.1.0'
         appcompatVersion = '1.2.0'
@@ -15,9 +15,9 @@ buildscript {
         fragmentVersion = '1.3.0-beta02'
         jsr305Version = '3.0.2'
         junitVersion = '4.13.1'
-        kotlinVersion = '1.4.21'
-        lifecycleRuntimeKtxVersion = '2.3.0-beta01'
-        materialComponentsVersion = '1.3.0-beta01'
+        kotlinVersion = '1.4.21-2'
+        lifecycleRuntimeKtxVersion = '2.3.0-rc01'
+        materialComponentsVersion = '1.3.0-rc01'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '3.6.0'
 
