--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         coroutinesVersion = '1.4.2'
         datastoreVersion = '1.0.0-alpha02'
         desugarVersion = '1.0.10'
-        fragmentVersion = '1.3.0-beta02'
+        fragmentVersion = '1.3.0-rc02'
         jsr305Version = '3.0.2'
         junitVersion = '4.13.1'
         kotlinVersion = '1.4.21-2'
