tunnel: add developer information to pom xml
Otherwise sonatype gets upset.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/tunnel/publish.gradle
+++ b/tunnel/publish.gradle
@@ -36,6 +36,10 @@ afterEvaluate {
                             name = 'WireGuard'
                             url = 'https://www.wireguard.com/'
                         }
+                        developer {
+                            name = 'WireGuard'
+                            email = 'team@wireguard.com'
+                        }
                     }
                 }
             }
