--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         fragmentVersion = '1.3.0'
         jsr305Version = '3.0.2'
         junitVersion = '4.13.1'
-        kotlinVersion = '1.4.21-2'
+        kotlinVersion = '1.4.30'
         lifecycleRuntimeKtxVersion = '2.3.0'
         materialComponentsVersion = '1.3.0-rc01'
         preferenceVersion = '1.1.1'
