--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         junitVersion = '4.13.1'
         kotlinVersion = '1.4.30'
         lifecycleRuntimeKtxVersion = '2.3.0'
-        materialComponentsVersion = '1.3.0-rc01'
+        materialComponentsVersion = '1.3.0'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '3.6.0'
 
