--- a/build.gradle
+++ b/build.gradle
@@ -70,13 +70,12 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() {
-            content {
-                // https://github.com/journeyapps/zxing-android-embedded/issues/606
-                includeModule("com.journeyapps", "zxing-android-embedded")
-                // https://youtrack.jetbrains.com/issue/IDEA-261387
-                includeModule("org.jetbrains.trove4j", "trove4j")
-            }
+    }
+    configurations.all {
+        // New versions use different maven coordinates and are available on Maven Central
+        resolutionStrategy.dependencySubstitution {
+            substitute(module("org.jetbrains.trove4j:trove4j:20160824"))
+                .using(module("org.jetbrains.intellij.deps:trove4j:1.0.20181211"))
         }
     }
 }
