gradle: include mavenCentral in plugin search repositories
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,8 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
 include ':tunnel'
 include ':ui'
