--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,25 @@
 buildscript {
     ext {
-        activityVersion = '1.2.1'
-        agpVersion = '4.1.2'
-        annotationsVersion = '1.1.0'
+        activityVersion = '1.2.2'
+        agpVersion = '4.1.3'
+        annotationsVersion = '1.2.0'
         appcompatVersion = '1.2.0'
-        biometricVersion = '1.1.0-rc01'
+        biometricVersion = '1.1.0'
         collectionVersion = '1.1.0'
         constraintLayoutVersion = '2.0.4'
         coordinatorLayoutVersion = '1.1.0'
         coreKtxVersion = '1.3.2'
-        coroutinesVersion = '1.4.2'
+        coroutinesVersion = '1.4.3'
         datastoreVersion = '1.0.0-alpha02'
         desugarVersion = '1.0.10'
-        fragmentVersion = '1.3.1'
+        fragmentVersion = '1.3.2'
         jsr305Version = '3.0.2'
-        junitVersion = '4.13.1'
+        junitVersion = '4.13.2'
         kotlinVersion = '1.4.31'
         lifecycleRuntimeKtxVersion = '2.3.0'
         materialComponentsVersion = '1.3.0'
         preferenceVersion = '1.1.1'
-        zxingEmbeddedVersion = '4.1.0'
+        zxingEmbeddedVersion = '4.2.0'
 
         groupName = 'com.wireguard.android'
     }
