--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,8 @@ android.namespacedRClass=true
 
 # Suppress warnings for some features that aren't yet stabilized
 android.suppressUnsupportedOptionWarnings=android.enableR8.fullMode,android.useMinimalKeepRules,android.namespacedRClass,android.suppressUnsupportedOptionWarnings
+
+# OSSRH sometimes struggles with slow deployments, so this makes Gradle
+# more tolerant to those delays.
+systemProp.org.gradle.internal.http.connectionTimeout=500000
+systemProp.org.gradle.internal.http.socketTimeout=500000
