--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 buildscript {
     ext {
         activityVersion = '1.2.3'
-        agpVersion = '4.2.1'
+        agpVersion = '4.2.2'
         annotationsVersion = '1.2.0'
         appcompatVersion = '1.3.0'
         biometricVersion = '1.1.0'
         collectionVersion = '1.1.0'
         constraintLayoutVersion = '2.0.4'
         coordinatorLayoutVersion = '1.1.0'
-        coreKtxVersion = '1.5.0'
-        coroutinesVersion = '1.5.0'
-        datastoreVersion = '1.0.0-beta01'
+        coreKtxVersion = '1.6.0'
+        coroutinesVersion = '1.5.1'
+        datastoreVersion = '1.0.0-rc01'
         desugarVersion = '1.1.5'
-        fragmentVersion = '1.3.4'
+        fragmentVersion = '1.3.5'
         jsr305Version = '3.0.2'
         junitVersion = '4.13.2'
-        kotlinVersion = '1.5.10'
+        kotlinVersion = '1.5.21'
         lifecycleRuntimeKtxVersion = '2.3.1'
-        materialComponentsVersion = '1.3.0'
+        materialComponentsVersion = '1.4.0'
         preferenceVersion = '1.1.1'
         zxingEmbeddedVersion = '4.2.0'
 
