ui: fix and silence lint errors
- The `copied_to_clipboard` translation for Farsi does not include
the placeholder, so it has been removed.

- A couple lints that are errors but we cannot particularly do anything about
were downgraded to warnings.

Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -57,6 +57,8 @@ android {
     }
     lintOptions {
         disable('LongLogTag')
+        warning('MissingTranslation')
+        warning('ImpliedQuantity')
     }
 }
 
